# silod

./: .vscode-ctags  Cargo.toml  config.toml.example  deny.toml  readme.md
.github/workflows/: audit.yml  clippy.yml  deny.yml
debian/: postinst  service
src/: config.rs  main.rs  scripts.rs  supply.rs  uevent.rs
