[package]
name = "silod"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
syslog        = { version = "7.0", default-features = false }
neli          = { version = "0.6", default-features = false }
serde         = { version = "1",   default-features = false, features = ["derive"] }
toml          = { version = "0.8", default-features = false, features = ["parse"] }
simple_logger = { version = "5",   default-features = false }
log           = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false
