[package]
name = "silod"
description = "Manage TS-SILO Supercap events"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
syslog         = { version = "7.0",  default-features = false }
serde          = { version = "1",    default-features = false, features = ["derive"] }
toml           = { version = "0.8",  default-features = false, features = ["parse"] }
simple_logger  = { version = "5",    default-features = false }
netlink-sys    = "0.8"
kobject-uevent = "0.2"
log            = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false

[package.metadata.deb]
maintainer-scripts = "debian/"
maintainer = "Mark Featherston <mark@embeddedts.com>"
copyright = "2025, Technologic Systems"

extended-description = """
silod is a minimal Rust daemon for embedded Linux that listens to kernel
uevents from the TS-SILO super-capacitor driver.  It applies user-specified
charging limits, runs hook scripts on power events, and initiates a clean
shutdown when power has failed and capacity is below a critical threshold.
"""

section = "utils"
priority = "optional"
systemd-units = { enable = true, restart-after-upgrade = true }
assets = [
    ["target/release/silod", "usr/sbin/", "755"],
    ["silo.toml.example", "etc/silod/silo.toml", "644"],
]
conf-files = ["/etc/silod/silo.toml"]
